--- a/start.html
+++ b/start.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documented</title>
 </head>
 <body>
     <h1>My Start file is not index.html file</h1>
+<div>
     <h3>New destination</h3>
+    <h3>New blog</h3>
+    <h5>Lock mama, i can warte a blog</h5>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo, at saepe. Totam in nihil nostrum, quo velit hic ipsum tempore quisquam ex exercitationem id inventore culpa impedit! Eius, iure hic!</p>
+</div>
     <img src="sharif3.jpeg" alt="">
 </body>
 </html>
